Added Image picker with bottom sheet dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Vaiyu</string>
+    <string name="delhi_in">Delhi, In</string>
+    <string name="deg">℃</string>
 </resources>
